DOCS-1241: Fix the issue with visible publication title

--- a/server/public/stylesheets/webhelp-overrides.css
+++ b/server/public/stylesheets/webhelp-overrides.css
@@ -111,7 +111,7 @@ div.wh_content_area {
   display: none;
 }
 
-.wh_publication_title {
+div.wh_publication_title {
   display: none;
 }
 
